--- a/UnetPure/requirements.txt
+++ b/UnetPure/requirements.txt
@@ -11,3 +11,9 @@ Datahandling==3.3.0
 Pillow==6.1.0
 kaggle==1.5.4
 skimage==0.0
+setuptools==40.4.3
+Theano==0.9.0
+Lasagne==0.2.dev1
+seaborn==0.7.0.dev0
+
+
